# TestingLibPack

./: .gitignore  README.md  Reflections on coding.md
SourceCode/: BaseFunc.cpp  BaseFunc.h  CMakeLists.txt  RunCMake.bat  TestUtilities.cpp  TestUtilities.h  Utilities.cpp  Utilities.h  main.cpp  msvcpch.cmake  stdafx.cpp  stdafx.h
